--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "faker": "^5.5.3",
     "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.3",
     "mysql2": "^3.6.1",
+    "twilio": "^4.18.1",
     "uuid": "^9.0.0"
   }
 }
