--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "18.17.1"
+  },
   "name": "portfolio",
   "version": "1.0.0",
   "description": "",
@@ -11,6 +14,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
